--- a/css/style.css
+++ b/css/style.css
@@ -190,12 +190,13 @@ canvas {
   margin-left: 0.5rem;
 }
 
+.d-none {
+    display: none;
+}
+
 .hide {
-  /*
     opacity: 0;
     visibility: hidden;
-    */
-  display: none;
 }
 
 /* -- FOOTER -- */
