--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,17 @@ canvas {
   background-color: var(--color-darkblue-400);
 }
 
+.container-alert h3{
+  font-size: 1.5rem;
+}
+
+.alert-win{
+  color: green;
+}
+.alert-lose{
+  color: red;
+}
+
 /* -- FORMULARIO -- */
 .formulario {
   min-height: calc(100vh - 232px);
